package com.codeflix.admin.catalog.domain.validation;

public record Error(String Message) {
}
